--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "bugs": "https://github.com/anonrig/nestjs-keycloak-admin",
   "peerDependencies": {
-    "@nestjs/common": "^9.0.8",
-    "@nestjs/core": "^9.0.8",
+    "@nestjs/common": "^9 || ^10",
+    "@nestjs/core": "^9 || ^10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.2"
   },
